--- a/seckill/src/main/webapp/WEB-INF/web.xml
+++ b/seckill/src/main/webapp/WEB-INF/web.xml
@@ -4,4 +4,19 @@
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
+  <!--配置despatcherservlet-->
+  <servlet>
+    <servlet-name>seckill-dispatcherservlet</servlet-name>
+    <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+    <!--配置springMVC需要加载的配置文件-->
+    <init-param>
+      <param-name>contextConfigLocation</param-name>
+      <param-value>classpath:spring/spring-*.xml</param-value>
+    </init-param>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>seckill-dispatcherservlet</servlet-name>
+    <!--默认匹配所有的请求-->
+    <url-pattern>/</url-pattern>
+  </servlet-mapping>
 </web-app>
